--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         height: 100%;
         margin: 0 auto;
       }
+
+      canvas {
+        background: #021C2C;
+      }
     </style>
   </head>
 </html>
