move url box up

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
       .chart__url {
         color: #CED7DC;
         font-size: 16px;
+        margin-left: 20px;
+        margin-top: -85px;
       }
     </style>
   </head>
